Fix dark mode for minirogue & tallyup

--- a/src/css/games/minirogue.less
+++ b/src/css/games/minirogue.less
@@ -79,6 +79,10 @@ html[data-theme=dark] {
 		color: #7740bf !important;
 	}
 
+	.mnr-magic-protection {
+		color: #865bbe !important;
+	}
+
 	.mnr-weaken,
 	.mnr-xp {
 		color: #4ba2b4 !important;
@@ -95,5 +99,9 @@ html[data-theme=dark] {
 
 	.mnr-potion-slot .mnr-potion7 {
 		color: hsla(0, 0%, 49%, .5) !important;
+	}
+
+	.mnr-combatBlock {
+		background: #fff2;
 	}
 }
